feat: ImplementedFory and SBE serializer helpers; Added Avaje module